Added borrow service; added unit tests for admin, borrow and fee services